--- a/templates/base.html
+++ b/templates/base.html
@@ -9,49 +9,32 @@
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
         <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen"> -->
+        <link href="{% static "css/base.css" %}" rel="stylesheet" media="screen">
         <style>
             @import url(//fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
             body,.body{
                 background:url(//subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png) no-repeat center center fixed;
                 background-color:transparent;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover
             }
-        </style>
-
-        <style>
-        body { font-size: 16px; }
-        label { font-size: 18px; }
-        .input-large {
-            height: 44px !important;
-            font-size: 18px !important;
-        }
-
-        .footer{
-            position: absolute;
-            width: 100%;
-            bottom: 0px;
-        }
-
-        </style>
+        </style>        
     </head>
     <body>
       {% block menu %}{% endblock %}
 
 
       {# page content #}
-      <div class=container style="padding-top:75px">
+      <div class="djcontent container">
           <div class=botonera>
               {% block botones %}{% endblock %}
           </div>
-          <div class=datos>
+          <div class="row datos center-block">
               {% block datos %}{% endblock %}
           </div>
       </div>
-    </div>
-
+    <!-- Este div sobra </div>-->
 
     {# footer #}
-    <footer class="footer panel-footer text-center"
-        style="max-height:75px;position:absolute;bottom:0;width:100%">
+    <footer class="footer text-center">
       <div class="container">
           <div class=row>
             <div class="col-md-2"><img src="{% static "img/apache-icon.png" %}" width=75px/>
@@ -68,9 +51,8 @@
       </div>
     </footer>
 
-
     <script src="//code.jquery.com/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>    
     </body>
 </html>
 {% endspaceless %}
