--- a/templates/base.html
+++ b/templates/base.html
@@ -8,30 +8,21 @@
         <meta charset="utf-8"/><title>.</title>
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap-theme.min.css">
-        <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen"> -->
-        <link href="{% static "css/base.css" %}" rel="stylesheet" media="screen">
-        <style>
-            @import url(//fonts.googleapis.com/css?family="Ubuntu");*{font-family:"Ubuntu"}
-            body,.body{
-                background:url(//subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png) no-repeat center center fixed;
-                background-color:transparent;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover
-            }
-        </style>        
+        <link rel=stylesheet href="{% static 'css/base.css' %}" media=screen>
     </head>
     <body>
       {% block menu %}{% endblock %}
 
 
-      {# page content #}
-      <div class="djcontent container">
-          <div class=botonera>
+    {# page content #}
+    <div class="djcontent container">
+        <div class=botonera>
             {% block botones %}{% endblock %}
-          </div>
-          <div class="row datos center-block">
-              {% block datos %}{% endblock %}
-          </div>
-      </div>
-    <!-- Este div sobra </div>-->
+        </div>
+        <div class="row datos center-block">
+            {% block datos %}{% endblock %}
+        </div>
+    </div>
 
     {# footer #}
     <footer class="footer text-center">
@@ -52,7 +43,7 @@
     </footer>
 
     <script src="//code.jquery.com/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>    
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
     </body>
 </html>
 {% endspaceless %}
