--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
         <link rel=stylesheet href="{% static 'css/base.css' %}" media=screen>
     </head>
     <body>
-      {% block menu %}{% endblock %}
+
+    {# fixed top menu bar #}
+    {% block menu %}{% include "base_menu.html" %}{% endblock %}
 
 
     {# page content #}
