--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,12 @@
             </div>
             <div class="col-md-2"><img src="{% static "img/djangologo.png" %}" width=75px/>
             </div>
-            <div class="col-md-2"><a href='/developers' class=credit>Desarrolladores</a>
+            <div class="col-md-2">
+                <details><summary>Info</summary><small>
+                    <a href="/developers" class=credit>Desarrolladores</a><br>
+                    <a href="//opensource.org/licenses/GPL-3.0" class=credit>Licencia</a><br>
+                    <a href="//github.com/martinovic/mysite" class=credit>Pagina Web</a><br></small>
+                </details>
             </div>
             <div class="col-md-2"><img src="{% static "img/Raspi_Colour_R.png" %}" width=40px/>
             </div>
