--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <html>
     <head>
-        <meta charset="utf-8"/><title>.</title>
+        <meta charset="utf-8"/><title>Django Colaborativo</title>
         <link rel=stylesheet href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css">
         <link rel=stylesheet href="{% static 'css/base.css' %}" media=screen>
     </head>
