--- a/templates/cliente/index_cliente.html
+++ b/templates/cliente/index_cliente.html
@@ -1,35 +1,58 @@
 {% extends "base.html" %}
 {% load url from future %}
 {% load staticfiles %}
-{% block menu %}
-    <div class="wrap" id=wrap>
-        <div class="navbar-sm navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/"><b>Django</b></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Principal</a></li>
-                <li><a href="/agenda">Agenda</a></li>
-                <li class="dropdown">
-                    <a href"#" class="dropdown-toggle" data-toggle="dropdown">Productos<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Stock real</a></li>
-                        <li><a href="#">Categorias</a></li>
-                        <li><a href="#">Historico</a></li>
-                    </ul>
-                </li>
-                <li><a href="/agenda">Compras</a></li>
-                <li><a href="/agenda">Ventas</a></li>
-            </ul>
-            <form class="navbar-form navbar-left" role=search>
-                <div class="form-group input-group-sm">
-                    <input type=search class="form-control" placeholder=Buscar>
-                </div>
-                <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="/logout/"><button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
-            </ul>
+
+{% block titulo%}Cliente{% endblock %}
+
+{% block botones %}
+    <form method="post" action="/cliente/search_cliente"
+        style="float:left; width:80%; margin:10px">
+        <input type="search" results=5 name="s"
+            style='height:30px; width:200px'
+            title="Busqueda de Clientes">
+    </form>
+    <form method=post action="" margin=0>
+        <button type=submit class="btn btn-lg btn-success">
+            <input type=hidden name=id value=none>
+              <span class="glyphicon glyphicon-edit" title="Alta de datos" style="font-size:30px"></span>
+        </button>
+    </form>
+{% endblock %}
+
+{% block datos %}
+<table>
+{% for post in posts %}
+    <tr>
+      <td>
+        <div class='info'>
+          <form method="post" action="" margin=0 style="float:left;">
+              <input type="hidden" name="id" value="{{ post.pk  }}"/>
+              <button type="submit">
+                  <span class="glyphicon glyphicon-minus-sign"
+                    title="Modificacion de datos">
+              </button>
+          </form>
+          <form method="post" action="" margin=0 style="float:left;">
+              <input type="hidden" name="id" value="{{ post.pk  }}"/>
+              <button type="submit">
+                  <span class="glyphicon glyphicon-pencil"
+                    title="Modificacion de datos">
+              </button>
+          </form>
+          <table>
+              <tr>
+                  <td>
+                      <span style='margin:10px'>{{ post.nombre }}</span></br>
+                      <span style='margin:10px'>{{ post.apellido }}</span></br>
+                      <span style='margin:10px'>{{ post.pais }}</span></br>
+                      <span style='margin:10px'>{{ post.provincia }}</span></br>
+
+                  </td>
+              </tr>
+          </table>
         </div>
-    </div>
+      </td>
+    </tr>
+{% endfor %}
+</table>
 {% endblock %}
