--- a/templates/base_menu.html
+++ b/templates/base_menu.html
@@ -12,14 +12,16 @@
                 <li class="active"><a href="#">Principal</a></li>
                 <li><a href="/agenda">Agenda</a></li>
                 <li class="dropdown">
-                    <a href"#" class="dropdown-toggle" data-toggle="dropdown">Productos<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Stock real</a></li>
-                        <li><a href="#">Categorias</a></li>
-                        <li><a href="#">Historico</a></li>
-                    </ul>
+                    <a href"#" class="dropdown-toggle"
+                        data-toggle="dropdown">Productos<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/productos">Productos</a></li>
+                            <li><a href="#">Stock real</a></li>
+                            <li><a href="#">Categorias</a></li>
+                            <li><a href="#">Historico</a></li>
+                        </ul>
                 </li>
-                <li><a href="/agenda">Compras</a></li>
+                <li><a href="/productos">Compras</a></li>
                 <li><a href="/agenda">Ventas</a></li>
             </ul>
             <form class="navbar-form navbar-left" role=search>
