--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,27 +7,31 @@
       </div>
         <ul class="nav navbar-nav">
             <li class=active><a href="#">Principal</a>
-            <li><a href="/agenda">Agenda</a>
+            <li><a href="/agenda/">Agenda</a>
             <li class=dropdown>
-                <a href="#" class="dropdown-toggle"
+                <a href="/productos" class="dropdown-toggle"
                     data-toggle="dropdown">Productos<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                      <li><a href="/productos">Productos</a></li>
                       <li><a href="#">Stock real</a></li>
                       <li><a href="#">Categorias</a></li>
                       <li><a href="#">Historico</a></li>
                     </ul>
             </li>
-            <li><a href="/agenda">Compras</a>
-            <li><a href="/agenda">Ventas</a>
+            <li><a href="/productos/">Compras</a>
+            <li><a href="/productos/">Ventas</a>
         </ul>
         <form class="navbar-form navbar-left" role=search>
             <div class="form-group input-group-sm">
                 <input type=search class="form-control" placeholder=Buscar>
             </div>
-            <button type=submit class="btn btn-sm"><span class="glyphicon glyphicon-search"></span></button>
+            <button type=submit class="btn btn-sm">
+                <span class="glyphicon glyphicon-search"></span>
+            </button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout/"><button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
+            <li><a href="/logout/">
+                <button class="btn btn-sm btn-warning">Salir <span class="glyphicon glyphicon-log-out"></span></button></a>
         </ul>
       </div>
     </div>
