modificando plantilla menu y creacion de template append cliente

--- a/templates/cliente/index_cliente.html
+++ b/templates/cliente/index_cliente.html
@@ -11,7 +11,7 @@
             style='height:30px; width:200px'
             title="Busqueda de Clientes">
     </form>
-    <form method=post action="" margin=0>
+    <form method=post action="/cliente/append_cliente/" margin=0>
         <button type=submit class="btn btn-lg btn-success">
             <input type=hidden name=id value=none>
               <span class="glyphicon glyphicon-edit" title="Alta de datos" style="font-size:30px"></span>
