--- a/templates/base_menu.html
+++ b/templates/base_menu.html
@@ -11,6 +11,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Principal</a></li>
                 <li><a href="/agenda">Agenda</a></li>
+                <li><a href="/cliente">Cliente</a></li>
                 <li class="dropdown">
                     <a href"#" class="dropdown-toggle" data-toggle="dropdown">Productos<b class="caret"></b></a>
                     <ul class="dropdown-menu">
