add create cliente

--- a/templates/cliente/save_cliente.html
+++ b/templates/cliente/save_cliente.html
@@ -6,8 +6,8 @@
 {% block titulo %}Alta de datos - Resultado{% endblock %}
 
 {% block botones %}
-    <form method="post" action="/agenda/save_agenda/">{% csrf_token %}
-    <button type="button" onclick="javascript:window.location =('/agenda/')">
+    <form method="post" action="/cliente/save_cliente/">{% csrf_token %}
+    <button type="button" onclick="javascript:window.location =('/cliente/')">
         <span class="glyphicon-arrow-left"
             title="Pantalla anterior" style="font-size:30px"></span>
     </button>
