--- a/templates/cliente/append_cliente.html
+++ b/templates/cliente/append_cliente.html
@@ -5,7 +5,7 @@
 {% block titulo %}Alta de datos{% endblock %}
 
 {% block botones %}
-    <form method=post role=form action="">
+    <form method=post role=form action="/cliente/save_cliente/">
         <input type=hidden name=id value="{{ posts.id }}">
         <button type=button onclick="window.location=('/cliente/')"
             class="btn btn-default btn-lg">
@@ -42,16 +42,6 @@
                     class="form-control"
                     value="{{ posts.apellido }}"
                     placeholder="Apellido" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class='col-lg-4'>
-                <input type="text"
-                    name="estado"
-                    id="estado"
-                    class="form-control"
-                    value="{{ posts.estado }}"
-                    placeholder="estado" required>
             </div>
         </div>
         <div class="form-group">
@@ -329,9 +319,10 @@
                     id="fechaNacimiento"
                     class="form-control"
                     value="{{ posts.fechaNacimiento }}"
-                    placeholder="Fecha Nacimiento" required>
+                    placeholder="Fecha Nacimiento" required/>
             </div>
         </div>
         </div>
     </div>
+    </form>
 {% endblock %}
