--- a/templates/base.html
+++ b/templates/base.html
@@ -86,9 +86,9 @@
         {# Off-Line Fallback for JS and CSS #}
         <script> 
             window.jQuery || document.write(
-                "<script src='js/jquery.min.js'><\/script>" + 
-                "<script src='js/bootstrap.min.js'><\/script>" + 
-                "<link rel=stylesheet href='css/bootstrap.min.css'>"
+                "<script src='static/js/jquery.min.js'><\/script>" + 
+                "<script src='static/js/bootstrap.min.js'><\/script>" + 
+                "<link rel=stylesheet href='static/css/bootstrap.min.css'>"
             )
         </script>
     </body>
