--- a/templates/developers.html
+++ b/templates/developers.html
@@ -19,7 +19,8 @@
                 Python, Django
             <td>
                 <span class="glyphicon glyphicon-user" style="font-size:100px"></span>
-                <br>-<br>-
+                <br>Edgard Pimentel<br>
+                Python, Django, OpenERP
             <td>
                 <span class="glyphicon glyphicon-user" style="font-size:100px"></span>
                 <br>-<br>-
