expensible ticket log on calculator app
expensible ticket log on calculator app

--- a/templates/calculator/calculator.html
+++ b/templates/calculator/calculator.html
@@ -37,7 +37,9 @@
   <div class="panel-heading">
     <h3 class="panel-title">Ticket Log</h3>
   </div>
-  <div id=tape class="panel-body text-center"></div>
+  <details open>
+      <div id=tape class="panel-body text-center"></div>
+  </details>
 </div>
 
 
