--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,7 @@
       </div>
     </div>
 
+prueba
 
         <script>function googleTranslateElementInit(){new google.translate.TranslateElement({pageLanguage:"auto"});}</script>
         <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
