--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,12 +5,15 @@
 @charset "utf-8";
 @import url(//fonts.googleapis.com/css?family="Ubuntu"); *{font-family:"Ubuntu"}
 
-
-body{
-    font-size: 16px;
+body.one{
     background:url(//subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png) no-repeat center center fixed;
     background-color:transparent;-webkit-background-size:cover;
     -moz-background-size:cover;-o-background-size:cover;background-size:cover
+}
+
+body.two{
+    background:url(//subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/bo_play_pattern.png) repeat repeat;
+    background-color:transparent;
 }
 
 label{ font-size: 18px }
@@ -35,12 +38,8 @@ input{
     width: 100%;
     min-height: 75px;
     bottom: 0;
-    background:
-    linear-gradient(135deg, #f5f5f5 22px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px),
-    linear-gradient(225deg, #f5f5f5 22px, #d9ecff 22px, #d9ecff 24px, transparent 24px, transparent 67px, #d9ecff 67px, #d9ecff 69px, transparent 69px)0 64px;
-    background-color: #f5f5f5;
-    background-size: 64px 128px;
-    border-top: 2px dotted gray
+    border-top: 2px dotted gray;
+    background-color:#282828;
 }
 
 /* Código inline encontrado en base.html */
