--- a/templates/cliente/delete_cliente.html
+++ b/templates/cliente/delete_cliente.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block titulo %}Agenda - Resultado{% endblock %}
+{% block titulo %}Cliente - Resultado{% endblock %}
 
 {% block botones %}
             <form method="post" action="/cliente/search_cliente/"
