--- a/templates/cliente/search_cliente.html
+++ b/templates/cliente/search_cliente.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 
-{% block titulo %}Agenda - Busqueda{% endblock %}
+{% block titulo %}Cliente - Busqueda{% endblock %}
 
 {% block botones %}
     <form method=post action="/cliente/search_cliente/">
