--- a/templates/productos/append_producto.html
+++ b/templates/productos/append_producto.html
@@ -5,7 +5,67 @@
 {% block titulo %}Alta de datos{% endblock %}
 
 {% block botones %}
+    <form method="post" role=form action="/productos/save_producto/">
+        <input type=hidden name=id value="{{ posts.id }}">
+        <button type=button onclick="window.location=('/productos/')"
+            class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-arrow-left"
+                tite="Pantalla anterior" style="font-size:30px"></span>
+        </button>
+        <button type=reset class="btn btn-lg btn-warning">
+            <span class="glyphicon glyphicon-remove-circle"
+              title="Cancelar alta de datos" style="font-size:30px"></span>
+        </button>
+        <button type="submit" class="btn btn-lg btn-success">
+            <span class="glyphicon glyphicon-floppy-save"
+                title="Guardar los datos" style="font-size:30px"></span>
+        </button>
 {% endblock%}
 
 {% block datos %}
+    <div style='overflow-y:auto; overflow-x:hidden; height:300px'>
+        <div class="form-group">
+            <div class='col-lg-11'>
+                <input type="text"
+                    name="name"
+                    id="nombre"
+                    value="{{ posts.name }}"
+                    class="form-control"
+                    placeholder="Nombre" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class='col-lg-4'>
+              <input type="text"
+                  name="description"
+                  id=""
+                  class="form-control"
+                  value="{{ posts.description }}"
+                  placeholder="Descripcion" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class='col-lg-4'>
+              <input type="category_id"
+                  name=""
+                  id=""
+                  class="form-control"
+                  value="{{ posts.category_id }}"
+                  placeholder="Categoria" required>
+            </div>
+        </div>
+        <div class="checkbox">
+            <div class='col-lg-4'>
+                <label>
+                    <input type="checkbox"
+                      name=""
+                      id=""
+                      class="form-control"
+                      value="{{ posts.enabled }}"
+                      required>Activado
+                </label>
+            </div>
+        </div>
+    </div>
+    </form>
 {% endblock %}
